<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/copy"
        android:title="@string/copy_txt"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/copy" />
    <item
        android:id="@+id/delete"
        android:title="@string/delete"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:icon="@drawable/delete" />
    <item
        android:id="@+id/delete_from_server"
        android:title="@string/delete_from_server"
        android:orderInCategory="100"
        app:showAsAction="never"
        android:visible="false"
        android:icon="@drawable/ic_delete_forever_white_24dp" />

    <item
        android:id="@+id/actionProgress"
        android:orderInCategory="100"
        android:visible="false"
        app:actionLayout="@layout/appbar_progress_bar"
        app:showAsAction="always" />
</menu>
