<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/item_holder"
    android:layout_width="1000dp"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:baselineAligned="false">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_weight="0.8"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/index"
            android:layout_width="30dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:text="No."
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/name"
            android:layout_width="120dp"
            android:gravity="center"
            android:layout_height="match_parent"
            android:text="malcolm Asek"
            android:background="@drawable/dues_item_border"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/folio"
            android:layout_width="50dp"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:text="13786"
            android:textColor="#000000"
            android:textSize="18sp" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal"
        android:layout_weight="0.2">

        <TextView
            android:id="@+id/jan"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/jan"
            android:textColor="#000000"
            android:textSize="18sp" />


        <TextView
            android:id="@+id/feb"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/feb"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/mar"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/mar"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/apr"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/apr"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/may"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/may"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/jun"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/jun"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/jul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/jul"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/aug"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/aug"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/sep"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/sep"
            android:textColor="#000000"
            android:textSize="18sp" />
        <TextView
            android:id="@+id/oct"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/oct"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/nov"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/nov"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/dec"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="@string/dec"
            android:textColor="#000000"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/total"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:background="@drawable/dues_item_border"
            android:layout_weight="0.08"
            android:text="Total"
            android:textColor="#000000"
            android:textSize="18sp" />
    </LinearLayout>


</LinearLayout>


